# PulseDev

./: .gitattributes  .gitignore  AI_SYSTEM_README.md  COMPLETE_SETUP_GUIDE.md  COMPLETION_REPORT.md  Dockerfile.frontend  FEATURE_STATUS_REPORT.md  FIXED_STARTUP_GUIDE.md  KUBERNETES_SETUP.md  LICENSE  Makefile  PRODUCTION_READY.md  QUICK_TEST_GUIDE.md  README.md  README_FINAL.md  SESSION_FINAL_SUMMARY.md  cypress.config.ts  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  prompt.md  tailwind.config.ts  test-plugin-integration.sh
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  test.yml
apps/browser-extension/: manifest.json
apps/ccm-api/: Dockerfile  config.py  dependencies.py  main.py  (+1 more)
docs/: AI_TRAINING_GUIDE.md  README.md  api-keys-setup.md  backend-api.md  browser-extension.md  nvidia-nim-setup.md  nvim-plugin.md  session-sync.md  tauri-app.md  team-collaboration-guide.md  vscode-plugin.md
k8s/: ccm-api.yaml  db-schema.sql  frontend.yaml  monitoring.yaml  namespace.yaml  postgres-init.sql  postgres.yaml  redis.yaml  secrets.yaml
monitoring/: prometheus.yml
scripts/: cleanup-k8s.sh  cleanup-project.sh  deploy-k8s.sh  deploy.sh  dev-setup.sh  test-k8s.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: dnd.rs  filesystem.rs  mod.rs  notifications.rs  tray.rs  window.rs
src-tauri/tests/: app.rs
(+88 files in other folders)
